tests/baselines/reference/privateIndexer.errors.txt
==== tests/cases/compiler/privateIndexer.ts (3 errors) ====
    // private indexers not allowed
    
    class C {
        private [x: string]: string;
        ~~~~~~~
!!! privateIndexer.ts(4,5): error TS1055: Modifiers cannot appear here.
    }
    
    class D {
        private [x: number]: string;
        ~~~~~~~
!!! privateIndexer.ts(8,5): error TS1055: Modifiers cannot appear here.
    }
    
    class E<T> {
        private [x: string]: T;
        ~~~~~~~
!!! privateIndexer.ts(12,5): error TS1055: Modifiers cannot appear here.
    }